@@ -9,6 +9,8 @@
 - much more gentle sharpening in thumbnails
 - added "minimise" signal, used by tilecache to drop
 - add :seq support to im_tiff2vips(), im_jpeg2vips() ... helps ruby-vips
+- better thread safety for vips8 operation dispatch
+- better thread safety for upstream / downstream image linking
 
 18/6/12 started 7.28.9
 - slightly more memory debugging output
